@@ -117,7 +117,7 @@ if (NOT EMBREE_FOUND)
 	MESSAGE(FATAL_ERROR "--> Could not locate required Intel Embree files - Please check ${EMBREE_SEARCH_PATH}")
 endif()
 
-if (NOT OIDN_FOUND)
+if (NOT OIDN_FOUND AND NOT LUXCORE_DISABLE_OIDN)
 	MESSAGE(FATAL_ERROR "--> Could not locate required Intel Oidn files - Please check ${OIDN_SEARCH_PATH}")
 endif()
 
@@ -150,6 +150,14 @@ else()
 		message(STATUS "OpenCL support: enabled")
 		message(STATUS "CUDA support: enabled")
 	endif()
+endif()
+
+if (LUXCORE_DISABLE_OIDN)
+	ADD_DEFINITIONS("-DLUXCORE_DISABLE_OIDN")
+
+	message(STATUS "Intel OIDN support: disabled")
+else()
+	message(STATUS "Intel OIDN support: enabled")
 endif()
 
 if (BUILD_LUXCORE_DLL)
