@@ -23,6 +23,7 @@ SET(Blosc_USE_STATIC_LIBS   "ON")
 # Note: CUDA requires to have enabled OpenCL support too
 #SET(LUXRAYS_DISABLE_CUDA TRUE)
 #SET(LUXRAYS_DISABLE_OPENCL TRUE)
+#SET(LUXCORE_DISABLE_OIDN TRUE)
 #SET(BUILD_LUXCORE_DLL TRUE)
 
 #SET(CMAKE_BUILD_TYPE "Debug")
