@@ -69,6 +69,7 @@ Beta1 released
 * Avoid to return CUDA_ERROR_NO_DEVICE error if CUDA is installed but there are no NVIDIA GPUs installed
 * Fixed compilation when CUDA is disabled but OpenCL is still enabled
 * Now disabling CUDA for any error during the cuInit() like when an external GPU is unplugged (issue #493)
+* Compiling the code with LUXCORE_DISABLE_OIDN defined will disable Intel OIDN (for platforms where it is not available like Apple M1)
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
